# cppinyin

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels-macos.yml  build-wheels-windows.yml  build-wheels.yml  linux-macos.yaml
cmake/: pybind11.cmake
cppinyin/: CMakeLists.txt
cppinyin/csrc/: CMakeLists.txt  cppinyin.cc  cppinyin.h  cppinyin_test.cc  darts.h  pinyin.cc  pinyin.h  utils.cc  utils.h
cppinyin/python/: CMakeLists.txt
cppinyin/python/cppinyin/: __init__.py  cli.py  cppinyin.py
cppinyin/python/csrc/: CMakeLists.txt  cppinyin.cc  cppinyin.h
cppinyin/python/tests/: CMakeLists.txt  test_cppinyin.py
