[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"


[project]
name = "cppinyin"
version = "0.3"
authors = [
  { name="Next-gen Kaldi development team", email="wkang@pku.edu.cn" },
]
dependencies = [
  "importlib-resources",
]
description="A simple and fast pinyin encoder and decoder."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pkufool/cppinyin"
"Bug Tracker" = "https://github.com/pkufool/cppinyin/issues"

[tool.black]
line-length = 80
